# hh-mcp-comfyui

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
docs/: README.EN.md  README.zh-CN.md
example/workflows/: i2image_bizyair_flux.json  i2image_bizyair_sdxl.json  image_backgroud_remove.json  kontext-edit-image.json  t2image_bizyair_flux.json  t2image_cogview4.json  t2image_sd1.5.json
src/hh/: comfyui_client.py  server.py
src/hh_mcp_comfyui/: __init__.py  __main__.py  comfyui_client.py  server.py
