[project]
name = "hh-mcp-comfyui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "websockets>=15.0.1",
    "websocket-client>=1.8.0",
]

[[project.authors]]
name = "harryzhang"
email = "zjf2671@126.com"

[project.urls]
"Homepage" = "https://github.com/zjf2671/hh-mcp-comfyui"
