[project]
name = "hh-mcp-comfyui"
version = "2025.04.20.4"
description = "基于Model Context Protocol (MCP)的ComfyUI图像生成服务，通过API调用本地ComfyUI实例生成图片,实现自然语言生图自由"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "websockets>=15.0.1",
    "websocket-client>=1.8.0",
    "aiohttp>=3.9.5",  # Add aiohttp with a recent version constraint
    "aiofiles>=23.2.1", # Add aiofiles with a recent version constraint
]
authors = [
  {name = "harryzhang", email = "hh@harryzhang.site"}
]
maintainers = [
  {name = "harryzhang", email = "hh@harryzhang.site"}
]

[project.urls]
Homepage = "https://github.com/zjf2671/hh-mcp-comfyui"
Repository = "https://github.com/zjf2671/hh-mcp-comfyui"
Issues = "https://github.com/zjf2671/hh-mcp-comfyui/issues"

[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hh-mcp-comfyui = "hh_mcp_comfyui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hh_mcp_comfyui"]
